card feature complete

--- a/index.html
+++ b/index.html
@@ -22,6 +22,24 @@
             <div class="card"></div>
             <div class="card"></div>
         </section>
+
+        <section class="products2">
+            <div class="card2">
+                <img src="https://i.picsum.photos/id/794/300/200.jpg?hmac=HDhH_umexV_q0wBwlZ1XyvuHlLxJk1zJl3sMKr8gQlw" alt="" class="card2__img">
+                <h1 class="card2__title">Lorem ipsum</h1>
+                <p class="card2__description">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Iste modi ut pariatur eos temp</p>
+            </div>
+            <div class="card2">
+                <img src="https://i.picsum.photos/id/794/300/200.jpg?hmac=HDhH_umexV_q0wBwlZ1XyvuHlLxJk1zJl3sMKr8gQlw" alt="" class="card2__img">
+                <h1 class="card2__title">Lorem ipsum</h1>
+                <p class="card2__description">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Iste modi ut pariatur eos temp</p>
+            </div>
+            <div class="card2">
+                <img src="https://i.picsum.photos/id/794/300/200.jpg?hmac=HDhH_umexV_q0wBwlZ1XyvuHlLxJk1zJl3sMKr8gQlw" alt="" class="card2__img">
+                <h1 class="card2__title">Lorem ipsum</h1>
+                <p class="card2__description">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Iste modi ut pariatur eos temp</p>
+            </div>
+        </section>
     </main>
 
 </body>
